--- a/requirements.txt
+++ b/requirements.txt
@@ -35,8 +35,10 @@ numpy==2.1.1
 openpyxl==3.1.5
 packaging==24.1
 pandas==2.2.3
+patsy==0.5.6
 pillow==10.4.0
 plotly==5.24.1
+plotly-express==0.4.1
 prometheus_client==0.21.0
 protobuf==5.28.2
 pyarrow==17.0.0
@@ -51,11 +53,13 @@ referencing==0.35.1
 requests==2.32.3
 rich==13.8.1
 rpds-py==0.20.0
+scipy==1.14.1
 six==1.16.0
 smmap==5.0.1
 soupsieve==2.6
 st-annotated-text==4.0.1
 st-theme==1.2.3
+statsmodels==0.14.3
 streamlit==1.38.0
 streamlit-camera-input-live==0.2.0
 streamlit-card==1.0.2
